# Nagdasev

./: CMakeLists.txt  README.md  Untitled Diagram.drawio  black_box.drawio  main.cpp
Test/: pair.hpp
Test/next/: man.hpp
Test/next/next/: woman.hpp
